
METASOURCES = AUTO
imagesdir = $(kde_htmldir)/en/neuroscope/Images
images_DATA = add_event_tool.png backCluster.png backEvent.png clusters.png colors.png discardingChannels.png discard.png edit.png event_tool.png eye_close.png eye.png forwardCluster.png forwardEvent.png initialView.png labels.png measure_tool.png movingChannels.png multipleColumns.png new_group.png newGroup.png offsets.png palettes.png printer.png properties.png remove.png removingChannels.png select_tool.png time_tool.png zoom_tool.png events.png measure.png modes.png positions.png selectTime.png keepDisplay.png keep.png skipDisplay.png skip.png time_line_tool.png epidural.png
